--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,23 @@
+analytics-python==1.2.9
 attrs==19.3.0
 backcall==0.2.0
+bcrypt==3.1.7
 bleach==3.1.5
 certifi==2020.6.20
+cffi==1.14.0
 chardet==3.0.4
 click==7.1.2
+cryptography==2.9.2
+cycler==0.10.0
 dataclasses==0.7
 decorator==4.4.2
 defusedxml==0.6.0
 entrypoints==0.3
 filelock==3.0.12
 future==0.18.2
+gradio==1.0.0
 idna==2.9
+imageio==2.9.0
 importlib-metadata==1.6.1
 ipykernel==5.3.0
 ipython==7.15.0
@@ -22,14 +29,18 @@ joblib==0.15.1
 jsonschema==3.2.0
 jupyter-client==6.1.3
 jupyter-core==4.6.3
+kiwisolver==1.2.0
 MarkupSafe==1.1.1
+matplotlib==3.2.2
 mistune==0.8.4
 nbconvert==5.6.1
 nbformat==5.0.7
+networkx==2.4
 notebook==6.0.3
 numpy==1.19.0
 packaging==20.4
 pandocfilters==1.4.2
+paramiko==2.7.1
 parso==0.7.0
 pexpect==4.8.0
 pickleshare==0.7.5
@@ -38,19 +49,25 @@ pkg-resources==0.0.0
 prometheus-client==0.8.0
 prompt-toolkit==3.0.5
 ptyprocess==0.6.0
+pycparser==2.20
 Pygments==2.6.1
+PyNaCl==1.4.0
 pyparsing==2.4.7
 pyrsistent==0.16.0
 python-dateutil==2.8.1
+PyWavelets==1.1.1
 pyzmq==19.0.1
 regex==2020.6.8
 requests==2.24.0
 sacremoses==0.0.43
+scikit-image==0.17.2
+scipy==1.5.1
 Send2Trash==1.5.0
 sentencepiece==0.1.92
 six==1.15.0
 terminado==0.8.3
 testpath==0.4.4
+tifffile==2020.7.4
 tokenizers==0.7.0
 torch==1.5.1+cpu
 torchvision==0.6.1+cpu
